2000-07-21  Mo DeJong  <mdejong@redhat.com>

	* win/configure.in: Add TK_STUB_LIB_FLAG and
	TK_BUILD_STUB_LIB_SPEC. These are needed to
	build a stub enabled extension.

2000-07-20  Eric Melski  <ericm@ajubasolutions.com>

	* unix/tkUnixDraw.c (TkScrollWindow): Replaced a use of a trinary
	operator with an if/else, to avoid build problems on some
	platforms [Bug: 5819].

	* win/makefile.vc: Applied patch from Don Porter to enhance nmake
	support on NT/Alpha [RFE: 5939].

2000-07-19  Eric Melski  <ericm@ajubasolutions.com>

	* library/text.tcl: Enhanced <Tab> binding to behave like normal
	<Tab> bindings when the text widget is disabled (ie, it advances
	focus to the next widget).

	* generic/tkText.c (TextSearchCmd): Added a test for a NULL
	segment pointer when doing backwards searches for "" on an empty
	text widget. [Bug: 6007].

2000-07-18  Mo DeJong  <mdejong@redhat.com>

	* unix/aclocal.m4: Use tcl.m4.

	* unix/configure.in: Properly quote LOCALES variable. Properly quote
	argument to m4 macro.
	
	* unix/tcl.m4: Add updated file from tcl.
	
	* win/tcl.m4: Updated file from tcl.

2000-07-18  Eric Melski  <ericm@ajubasolutions.com>

	* library/tkfbox.tcl: Fixed keyboard navigation in the iconlist.

	* unix/configure.in (MAKE_LIB): Corrected definition of MAKE_LIB
	for shared builds, with patch from Mike Hopkirk.
	
2000-07-18  Mo DeJong  <mdejong@redhat.com>

	* win/Makefile.in: Fix TCL_GENERIC_DIR variable
	so that it uses the TK_SRC_DIR in the same way
	as the unix version.

2000-07-17  David Gravereaux  <davygrvy@ajubasolutions.com>

	* generic/tkConsole.c: Added comments for a Win2K OS bug with
	GetStdHandle(STD_OUTPUT_HANDLE).  No change was done to the code
	as the resulting behaviour of ShouldUseConsoleChannel() was
	correct, anyways. [BUG: 5971]

2000-07-17  Eric Melski  <ericm@scriptics.com>

	* generic/tkStubImg.c (Tk_InitImageArgs): Applied patch from [Bug:
	5990], from Anselm Lingnau, which correctly sets the value of